--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="TemplateMo">
   <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 
-  <title>Education Meeting HTML5 Template</title>
+  <title>TIRTARONA - TELE</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -38,29 +38,28 @@ https://templatemo.com/tm-569-edu-meeting
   <header class="header-area header-sticky">
     <div class="container">
       <div class="row">
-        <div class="col-12">
+        <div class="col-lg-12">
           <nav class="main-nav">
             <!-- ***** Logo Start ***** -->
             <a href="index.html" class="logo">
-              Wisata peduli Lingkungan
+              WISATA PEDULI LINGKUNGAN
             </a>
             <!-- ***** Logo End ***** -->
             <!-- ***** Menu Start ***** -->
             <ul class="nav">
-              <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
+              <li><a href="index.html" class="active">Home</a></li>
               <li><a href="meetings.html">Kegiatan</a></li>
-              <li><a href="kepengurusan.html">Susunan Kepengurusan</a></li>
-              <li class="scroll-to-section"><a href="#apply">Penghargaan</a></li>
+              <li><a href="penghargaan.html">Penghargaan</a></li>
               <li class="has-sub">
                 <a href="javascript:void(0)">Sensor</a>
                 <ul class="sub-menu">
-                  <li><a href="meetings.html">Suhu</a></li>
-                  <li><a href="meeting-details.html">TSS</a></li>
-                  <li><a href="meeting-details.html">PH</a></li>
-                  <li><a href="meeting-details.html">DO</a></li>
+                  <li><a href="sensorsuhu.html">Suhu</a></li>
+                  <li><a href="sensortss.html">TSS</a></li>
+                  <li><a href="sensorph.html">PH</a></li>
+                  <li><a href="sensordo.html">DO</a></li>
                 </ul>
               </li>
-              <li class="scroll-to-section"><a href="#contact">Contact Us</a></li>
+              <li><a href="contactus.html">Contact Us</a></li>
             </ul>
             <a class='menu-trigger'>
               <span>Menu</span>
@@ -85,10 +84,10 @@ https://templatemo.com/tm-569-edu-meeting
           <div class="col-lg-12">
             <div class="caption">
               <h6>HELLO</h6>
-              <h2>SELAMAT DATANG DI WEBSITE TIRTA RONA</h2>
+              <h2>SELAMAT DATANG DI WEBSITE MONITORING TIRTA RONA</h2>
               <p>Ini adalah website monitoring yang dibuat untuk memantau situasi di Tirta Rona </p>
               <div class="main-button-red">
-                <div class="scroll-to-section"><a href="#contact">yukkk kita lihat</a></div>
+                <div><a href="profil.html">Profil Tirta Rona</a></div>
               </div>
             </div>
           </div>
