--- a/penghargaan.html
+++ b/penghargaan.html
@@ -30,32 +30,6 @@ https://templatemo.com/tm-569-edu-meeting
 </head>
 
 <body>
-
-
-
-    <!-- Sub Header -->
-    <div class="sub-header">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-sm-8">
-                    <div class="left-content">
-                        <p>This is an educational <em>HTML CSS</em> template by TemplateMo website.</p>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-sm-4">
-                    <div class="right-icons">
-                        <ul>
-                            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fa fa-behance"></i></a></li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
     <!-- ***** Header Area Start ***** -->
     <header class="header-area header-sticky">
         <div class="container">
@@ -70,8 +44,8 @@ https://templatemo.com/tm-569-edu-meeting
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
                             <li><a href="index.html">Home</a></li>
-                            <li><a href="meetings.html" class="active">Kegiatan</a></li>
-                            <li><a href="penghargaan.html">Penghargaan</a></li>
+                            <li><a href="meetings.html">Kegiatan</a></li>
+                            <li><a href="penghargaan.html" class="active">Penghargaan</a></li>
                             <li class="has-sub">
                                 <a href="javascript:void(0)">Sensor</a>
                                 <ul class="sub-menu">
