--- a/Program.html
+++ b/Program.html
@@ -84,7 +84,7 @@ https://templatemo.com/tm-569-edu-meeting
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h6>PENGHARGAAN YANG DITERIMA OLEH TIRTA RONA</h6>
+                    <h6>Berikut adalah Program yang dilakukan</h6>
                 </div>
             </div>
         </div>
@@ -98,10 +98,10 @@ https://templatemo.com/tm-569-edu-meeting
                         <div class="col-lg-12">
                             <div class="filters">
                                 <ul>
-                                    <li data-filter="*" class="active">Penghargaan terkenal</li>
-                                    <li data-filter=".soon">Penghargaan jakarta</li>
-                                    <li data-filter=".imp">Penghargaan sejawa timur</li>
-                                    <li data-filter=".att">Penghargaan Nasional</li>
+                                    <li data-filter="*" class="active">Program Inti</li>
+                                    <li data-filter=".soon">Program tahun kemarin</li>
+                                    <li data-filter=".imp">Program Mendatang</li>
+                                    <li data-filter=".att">Program yang sedang berlangsung</li>
                                 </ul>
                             </div>
                         </div>
