--- a/contactus.html
+++ b/contactus.html
@@ -90,24 +90,18 @@ https://templatemo.com/tm-569-edu-meeting
                                     <div class="right-info">
                                         <ul>
                                             <li>
-                                                <h2>Phone Number</h2>
+                                                <i class="fa-regular fa-square-phone"></i>
+                                                <span> Phone Number </span>
                                                 <span>081929417832</span>
-                                            </li>
-                                            <li>
                                                 <h6>Email Address</h6>
-                                                <h6>ramandaniirmasari2000@gmail.com</h6>
-                                            </li>
-                                            <li>
+                                                <span>ramandaniirmasari2000@gmail.com</span>
                                                 <h6>Social Media</h6>
-                                                <h6>Whatshapp : 081929417832 </h6>
-                                                <h6>Instagram : @rmndaniirmsri </h6>
-                                                <h6>Twitter : imaatumel </h6>
-                                                <h6>Facebook : Ramandani irma Sari </h6>
-
-                                            </li>
-                                            <li>
-                                                <h6>Website URL</h6>
-                                                <span>www.irmacomel.com</span>
+                                                <span>Whatshapp : 081929417832 </span>
+                                                <span>Instagram : @rmndaniirmsri </span>
+                                                <span>Twitter : imaatumel </span>
+                                                <span>Facebook : Ramandani irma Sari </span>
+                                                <h6>Website URL</sa>
+                                                    <span>www.irmacomel.com</span>
                                             </li>
                                         </ul>
                                     </div>
