--- a/kegiatan.html
+++ b/kegiatan.html
@@ -84,7 +84,7 @@ https://templatemo.com/tm-569-edu-meeting
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h6>PENGHARGAAN YANG DITERIMA OLEH TIRTA RONA</h6>
+                    <h6>KEGIATAN YANG ADA DI TIRTA RONA WISATA PEDULI PERUBAHAN IKLIM</h6>
                 </div>
             </div>
         </div>
@@ -98,10 +98,10 @@ https://templatemo.com/tm-569-edu-meeting
                         <div class="col-lg-12">
                             <div class="filters">
                                 <ul>
-                                    <li data-filter="*" class="active">Penghargaan terkenal</li>
-                                    <li data-filter=".soon">Penghargaan jakarta</li>
-                                    <li data-filter=".imp">Penghargaan sejawa timur</li>
-                                    <li data-filter=".att">Penghargaan Nasional</li>
+                                    <li data-filter="*" class="active">Kegiatan Inti</li>
+                                    <li data-filter=".soon">Kegiatan yang mendatang</li>
+                                    <li data-filter=".imp">Kegiatan Tiap Minggu</li>
+                                    <li data-filter=".att">Kegiatan Tiap Hari</li>
                                 </ul>
                             </div>
                         </div>
