--- a/index.html
+++ b/index.html
@@ -48,8 +48,14 @@ https://templatemo.com/tm-569-edu-meeting
             <!-- ***** Menu Start ***** -->
             <ul class="nav">
               <li><a href="index.html" class="active">Home</a></li>
-              <li><a href="meetings.html">Kegiatan</a></li>
-              <li><a href="penghargaan.html">Penghargaan</a></li>
+              <li class="has-sub">
+                <a href="javascript:void(0)">About</a>
+                <ul class="sub-menu">
+                  <li><a href="kegiatan.html">Kegiatan</a></li>
+                  <li><a href="sensortss.html">Program</a></li>
+                  <li><a href="sensorph.html">Penghargaan</a></li>
+                </ul>
+              </li>
               <li class="has-sub">
                 <a href="javascript:void(0)">Sensor</a>
                 <ul class="sub-menu">
@@ -85,7 +91,9 @@ https://templatemo.com/tm-569-edu-meeting
             <div class="caption">
               <h6>HELLO</h6>
               <h2>SELAMAT DATANG DI WEBSITE MONITORING TIRTA RONA</h2>
-              <p>Ini adalah website monitoring yang dibuat untuk memantau situasi di Tirta Rona </p>
+              <p>Ini adalah website monitoring yang dibuat untuk memantau situasi dan kondisi Di Tirta Rona wisata
+                peduli
+                perubahan Iklim </p>
               <div class="main-button-red">
                 <div><a href="profil.html">Profil Tirta Rona</a></div>
               </div>
@@ -106,27 +114,27 @@ https://templatemo.com/tm-569-edu-meeting
               <form id="contact" action="" method="post">
                 <div class="row">
                   <div class="col-lg-12">
-                    <h2>VISI & MISI</h2>
+                    <h2>PETA</h2>
                   </div>
                   <div class="col-lg-12">
                     <fieldset>
-                      <textarea name="message" type="text" class="form-control" id="message" placeholder=" VISI "
+                      <textarea name="message" type="text" class="form-control" id="message" placeholder="  "
                         required=""></textarea>
                     </fieldset>
                   </div>
                   <div class="col-lg-12">
                     <fieldset>
-                      <textarea name="message" type="text" class="form-control" id="message" placeholder=" MISI "
+                      <textarea name="message" type="text" class="form-control" id="message" placeholder="  "
                         required=""></textarea>
                     </fieldset>
                   </div>
                   <div class="col-lg-12">
                     <fieldset>
-                      <button type="submit" id="form-submit" class="button">PETA</button>
+                      <button type="submit" id="form-submit" class="button">MAPS</button>
                     </fieldset>
                   </div>
                 </div>
-              </form>
+              </form>`
             </div>
           </div>
         </div>
@@ -159,8 +167,8 @@ https://templatemo.com/tm-569-edu-meeting
       </div>
     </div>
     <div class="footer">
-      <p>Copyright © 2022 Edu Meeting Co., Ltd. All Rights Reserved.
-        <br>Design: <a href="https://templatemo.com" target="_parent" title="free css templates">TemplateMo</a>
+      <p>Copyright © 2022 Tirta Rona Co., Ltd. All Rights Reserved.
+        <br>Design From IT SUPPORT
       </p>
     </div>
   </section>
