--- a/profil.html
+++ b/profil.html
@@ -99,84 +99,109 @@ https://templatemo.com/tm-569-edu-meeting
                                                 placeholder=" MISI " required=""></textarea>
                                         </fieldset>
                                     </div>
-                                    <div class="col-lg-12">
-                                        <fieldset>
-                                            <button type="submit" id="form-submit" class="button">PETA</button>
-                                        </fieldset>
-                                    </div>
                                 </div>
                             </form>
                         </div>
                     </div>
                 </div>
 
-                <div class="footer">
-                    <p>Copyright © 2022 Edu Meeting Co., Ltd. All Rights Reserved.
-                        <br>Design: <a href="https://templatemo.com" target="_parent"
-                            title="free css templates">TemplateMo</a>
-                    </p>
-                </div>
-    </section>
+                <!-- ***** Susunan Kepengurusan ***** -->
+                <section class="contact-us" id="contact">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-lg-8 align-self-center">
+                                <div class="row">
+                                    <div class="col-lg-12">
+                                        <form id="contact" action="" method="post">
+                                            <div class="row">
+                                                <div class="col-lg-12">
+                                                    <h2>Susunan Kepengurusan Tirta Rona</h2>
+                                                </div>
+                                                <div class="col-lg-12">
+                                                    <fieldset>
+                                                        <textarea name="message" type="text" class="form-control"
+                                                            id="message" placeholder=" VISI " required=""></textarea>
+                                                    </fieldset>
+                                                </div>
+                                                <div class="col-lg-12">
+                                                    <fieldset>
+                                                        <textarea name="message" type="text" class="form-control"
+                                                            id="message" placeholder=" MISI " required=""></textarea>
+                                                    </fieldset>
+                                                </div>
+                                            </div>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
 
-    <!-- Scripts -->
-    <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+                            <div class="footer">
+                                <p>Copyright © 2022 Edu Meeting Co., Ltd. All Rights Reserved.
+                                    <br>Design: <a href="https://templatemo.com" target="_parent"
+                                        title="free css templates">TemplateMo</a>
+                                </p>
+                            </div>
+                </section>
 
-    <script src="assets/js/isotope.min.js"></script>
-    <script src="assets/js/owl-carousel.js"></script>
-    <script src="assets/js/lightbox.js"></script>
-    <script src="assets/js/tabs.js"></script>
-    <script src="assets/js/video.js"></script>
-    <script src="assets/js/slick-slider.js"></script>
-    <script src="assets/js/custom.js"></script>
-    <script>
-        //according to loftblog tut
-        $('.nav li:first').addClass('active');
+                <!-- Scripts -->
+                <!-- Bootstrap core JavaScript -->
+                <script src="vendor/jquery/jquery.min.js"></script>
+                <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-        var showSection = function showSection(section, isAnimate) {
-            var
-                direction = section.replace(/#/, ''),
-                reqSection = $('.section').filter('[data-section="' + direction + '"]'),
-                reqSectionPos = reqSection.offset().top - 0;
+                <script src="assets/js/isotope.min.js"></script>
+                <script src="assets/js/owl-carousel.js"></script>
+                <script src="assets/js/lightbox.js"></script>
+                <script src="assets/js/tabs.js"></script>
+                <script src="assets/js/video.js"></script>
+                <script src="assets/js/slick-slider.js"></script>
+                <script src="assets/js/custom.js"></script>
+                <script>
+                    //according to loftblog tut
+                    $('.nav li:first').addClass('active');
 
-            if (isAnimate) {
-                $('body, html').animate({
-                    scrollTop: reqSectionPos
-                },
-                    800);
-            } else {
-                $('body, html').scrollTop(reqSectionPos);
-            }
+                    var showSection = function showSection(section, isAnimate) {
+                        var
+                            direction = section.replace(/#/, ''),
+                            reqSection = $('.section').filter('[data-section="' + direction + '"]'),
+                            reqSectionPos = reqSection.offset().top - 0;
 
-        };
+                        if (isAnimate) {
+                            $('body, html').animate({
+                                scrollTop: reqSectionPos
+                            },
+                                800);
+                        } else {
+                            $('body, html').scrollTop(reqSectionPos);
+                        }
 
-        var checkSection = function checkSection() {
-            $('.section').each(function () {
-                var
-                    $this = $(this),
-                    topEdge = $this.offset().top - 80,
-                    bottomEdge = topEdge + $this.height(),
-                    wScroll = $(window).scrollTop();
-                if (topEdge < wScroll && bottomEdge > wScroll) {
-                    var
-                        currentId = $this.data('section'),
-                        reqLink = $('a').filter('[href*=\\#' + currentId + ']');
-                    reqLink.closest('li').addClass('active').
-                        siblings().removeClass('active');
-                }
-            });
-        };
+                    };
 
-        $('.main-menu, .responsive-menu, .scroll-to-section').on('click', 'a', function (e) {
-            e.preventDefault();
-            showSection($(this).attr('href'), true);
-        });
+                    var checkSection = function checkSection() {
+                        $('.section').each(function () {
+                            var
+                                $this = $(this),
+                                topEdge = $this.offset().top - 80,
+                                bottomEdge = topEdge + $this.height(),
+                                wScroll = $(window).scrollTop();
+                            if (topEdge < wScroll && bottomEdge > wScroll) {
+                                var
+                                    currentId = $this.data('section'),
+                                    reqLink = $('a').filter('[href*=\\#' + currentId + ']');
+                                reqLink.closest('li').addClass('active').
+                                    siblings().removeClass('active');
+                            }
+                        });
+                    };
 
-        $(window).scroll(function () {
-            checkSection();
-        });
-    </script>
+                    $('.main-menu, .responsive-menu, .scroll-to-section').on('click', 'a', function (e) {
+                        e.preventDefault();
+                        showSection($(this).attr('href'), true);
+                    });
+
+                    $(window).scroll(function () {
+                        checkSection();
+                    });
+                </script>
 </body>
 
 </body>
