--- a/sensorsuhu.html
+++ b/sensorsuhu.html
@@ -47,18 +47,23 @@ https://templatemo.com/tm-569-edu-meeting
                         <!-- ***** Logo End ***** -->
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="meetings.html">Kegiatan</a></li>
-                            <li><a href="penghargaan.html">Penghargaan</a></li>
+                            <li><a href="index.html" class="active">Home</a></li>
+                            <li class="has-sub">
+                                <a href="javascript:void(0)">About</a>
+                                <ul class="sub-menu">
+                                    <li><a href="kegiatan.html">Kegiatan</a></li>
+                                    <li><a href="Program.html">Program</a></li>
+                                    <li><a href="penghargaan.html">Penghargaan</a></li>
+                                </ul>
+                            </li>
                             <li class="has-sub">
                                 <a href="javascript:void(0)">Sensor</a>
                                 <ul class="sub-menu">
-                                    <li><a href="meetings.html">Suhu</a></li>
-                                    <li><a href="meeting-details.html">TSS</a></li>
-                                    <li><a href="meeting-details.html">PH</a></li>
-                                    <li><a href="meeting-details.html">DO</a></li>
+                                    <li><a href="sensorsuhu.html">Suhu</a></li>
+                                    <li><a href="sensortss.html">TSS</a></li>
+                                    <li><a href="sensorph.html">PH</a></li>
+                                    <li><a href="sensordo.html">DO</a></li>
                                 </ul>
-                            </li>
                             <li><a href="contactus.html">Contact Us</a></li>
                         </ul>
                         <a class='menu-trigger'>
