--- a/contactus.html
+++ b/contactus.html
@@ -48,8 +48,14 @@ https://templatemo.com/tm-569-edu-meeting
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
                             <li><a href="index.html">Home</a></li>
-                            <li><a href="meetings.html">Kegiatan</a></li>
-                            <li><a href="penghargaan.html">Penghargaan</a></li>
+                            <li class="has-sub">
+                                <a href="javascript:void(0)">About</a>
+                                <ul class="sub-menu">
+                                    <li><a href="kegiatan.html">Kegiatan</a></li>
+                                    <li><a href="Program.html">Program</a></li>
+                                    <li><a href="penghargaan.html">Penghargaan</a></li>
+                                </ul>
+                            </li>
                             <li class="has-sub">
                                 <a href="javascript:void(0)">Sensor</a>
                                 <ul class="sub-menu">
